<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationForLunas"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/success_state" />

    <TextView
        android:id="@+id/confirmTitle"
        style="@style/HeadingTitle"
        android:layout_marginTop="16dp"
        android:text="@string/hore"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationForLunas" />

    <TextView
        android:id="@+id/confirmContent"
        style="@style/BodyContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-72dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-72dp"
        android:text="@string/congrats_lunas"
        android:textAlignment="center"
        android:textColor="?attr/colorControlActivated"
        app:layout_constraintEnd_toEndOf="@+id/confirmTitle"
        app:layout_constraintStart_toStartOf="@+id/confirmTitle"
        app:layout_constraintTop_toBottomOf="@+id/confirmTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ConfirmButton"
        style="@style/CustomTonalButton"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmContent" />

</androidx.constraintlayout.widget.ConstraintLayout>